# golz4-2

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  batch.go  doc.go  header.go  header_test.go  lz4.go  lz4_hc.go  lz4_hc_test.go  lz4_test.go  sample2.txt  shakespeare.txttestcom.lz4
src/: BUILD.bazel  lz4.c
